--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
+        "php": "*",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "~6.0",
-        "illuminate/contracts": "~5.4",
-        "illuminate/http": "~5.4",
-        "illuminate/support": "~5.4",
-        "league/oauth1-client": "~1.0"
+        "guzzlehttp/guzzle": "*",
+        "illuminate/contracts": "*",
+        "illuminate/http": "*",
+        "illuminate/support": "*",
+        "league/oauth1-client": "*"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
